2010-03-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSImageCell.h
	* Headers/AppKit/NSLevelIndicator.h
	* Headers/AppKit/NSMatrix.h
	* Headers/AppKit/NSMenu.h
	* Headers/AppKit/NSLayoutManager.h
	* Headers/AppKit/NSInputServer.h
	* Headers/AppKit/NSImageRep.h
	* Headers/AppKit/NSMovieView.h
	* Headers/AppKit/NSMovie.h
	* Headers/AppKit/NSHelpManager.h
	* Headers/AppKit/NSMenuItemCell.h
	* Headers/AppKit/NSInterfaceStyle.h
	* Headers/AppKit/NSMenuItem.h
	* Headers/AppKit/NSInputManager.h
	* Headers/AppKit/NSLevelIndicatorCell.h
	* Headers/AppKit/NSMenuView.h
	* Headers/AppKit/NSHelpPanel.h
	* Headers/AppKit/NSImage.h
	* Headers/AppKit/NSKeyValueBinding.h
	* Source/NSPopUpButtonCell.m
	* Source/GSWindowDecorationView.m
	* Source/NSPopUpButton.m
	* Source/NSHelpManager.m
	* Source/NSToolbar.m
	* Source/GSToolbarCustomizationPalette.m
	* Source/GSTitleView.m
	* Source/NSMenuView.m
	* Source/NSCell.m: Some more #include -> #import replacement.

2010-03-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSNibLoading.m
	(NSIBObjectData-nibInstantiateWithOwner:topLevelObjects:): Loop
	over _names instead of _objects.

2010-03-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSController.h
	* Headers/AppKit/NSGlyphGenerator.h
	* Headers/AppKit/NSGradient.h
	* Headers/AppKit/NSGraphicsContext.h
	* Headers/AppKit/NSPopUpButton.h
	* Headers/AppKit/NSShadow.h
	* Source/NSPopUpButtonCell.m
	* Source/NSGlyphGenerator.m
	* Source/NSPopUpButton.m
	* Source/NSMenu.m
	* Source/NSGradient.m
	* Source/GSHorizontalTypesetter.m
	* Source/NSTextView.m
	* Source/NSShadow.m
	* Source/NSPrintPanel.m
	* Source/NSSpellChecker.m
	* Source/NSDocument.m: Yet another bit of #include -> #import
	replacement. Replace includes of Foundation.h.

2010-03-24 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSColorList.h
	* Headers/AppKit/NSBox.h
	* Headers/AppKit/NSFontManager.h
	* Headers/AppKit/NSFormCell.h
	* Headers/AppKit/NSButtonCell.h
	* Headers/AppKit/NSColorPicker.h