@@ -1,3 +1,8 @@
+2010-03-25 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/GSXibLoader.m,
+	* Source/NSView.m : removed c99-isms
+	
 2010-03-25 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/AppKit/NSImageCell.h
